change filename - server.cpp -> main.cpp - serverimpl.cpp -> server.cpp - session.h -> sessionbase.h
add design.md to solution

add test project to solution

--- a/network/test/test.vcxproj
+++ b/network/test/test.vcxproj
@@ -19,9 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{419CDE32-E2AE-4391-8F19-364B57AA9C81}</ProjectGuid>
+    <ProjectGuid>{B74A1F48-070B-4F47-8B6C-BE9C812BFC73}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>server</RootNamespace>
+    <RootNamespace>test</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -146,13 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="server.cpp" />
-    <ClCompile Include="sessionbase.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="server.h" />
-    <ClInclude Include="sessionbase.h" />
+    <ClCompile Include="test.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
