--- a/network/server/server.vcxproj.filters
+++ b/network/server/server.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="sessionbase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="testsession.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
