add IDevice, DeviceBase class.  - base class of Camera, DIOBoard, BarcodeReader, ServoMotor class

--- a/ControlDeviceApp/MainApp/MainApp.vcxproj.filters
+++ b/ControlDeviceApp/MainApp/MainApp.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="architecture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DeviceBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
