--- a/ControlDeviceApp/MainApp/MainApp.vcxproj
+++ b/ControlDeviceApp/MainApp/MainApp.vcxproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="architecture.h" />
+    <ClInclude Include="DeviceBase.h" />
     <ClInclude Include="error_code.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
