--- a/ControlDeviceApp/UITest/UITest.vcxproj.filters
+++ b/ControlDeviceApp/UITest/UITest.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="define.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="singleton.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
