--- a/dynamic-build-system/CMakeLists.txt
+++ b/dynamic-build-system/CMakeLists.txt
@@ -5,13 +5,4 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-set(FILE_SOURCES
-  "main.cpp"
-)
-set(FILE_HEADERS
-)
-
-add_executable(${PROJECT_NAME}
-  ${FILE_SOURCES}
-  ${FILE_HEADERS}
-)
+add_subdirectory(src)
