--- a/dynamic-build-system/CMakeLists.txt
+++ b/dynamic-build-system/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+include_directories("${CMAKE_SOURCE_DIR}/src")
+
 add_subdirectory(src)
