--- a/dynamic-build-system/src/util/CMakeLists.txt
+++ b/dynamic-build-system/src/util/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-
-set(MODULE_NAME util)
-set(MODULE_VERSION 0.1)
+project(util VERSION 0.1)
 
 set(FILE_SOURCES
   "tokenize.cpp"
@@ -10,7 +8,7 @@ set(FILE_HEADERS
   "util.hpp"
 )
 
-add_library(${MODULE_NAME}
+add_library(${PROJECT_NAME}
   ${FILE_SOURCES}
   ${FILE_HEADERS}
 )
