plugin loader/sample added
- executable_path util function added, windows version.
- make util library shared.
- plugin sample added.
- plugin loader added.

--- a/dynamic-build-system/CMakeLists.txt
+++ b/dynamic-build-system/CMakeLists.txt
@@ -5,6 +5,17 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+if (MSVC)
+  # ignore warning 4251
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251")
+endif()
+
+# platform
+if (WIN32)
+  add_compile_options(-DWINDOWS)
+else()
+endif()
+
 include_directories("${CMAKE_SOURCE_DIR}/src")
 
 add_subdirectory(src)
