--- a/dynamic-build-system/src/core/CMakeLists.txt
+++ b/dynamic-build-system/src/core/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
+project(core)
 
 add_compile_options(-DCORE_EXPORTS)
 
+add_subdirectory(loader)
 add_subdirectory(iosystem)
