--- a/dynamic-build-system/src/plugin/CMakeLists.txt
+++ b/dynamic-build-system/src/plugin/CMakeLists.txt
@@ -1,15 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
-project(util VERSION 0.1)
+project(sample VERSION 0.1)
 
 set(FILE_SOURCES
-  "tokenize.cpp"
-  "executable_path.cpp"
+  "sample.cpp"
 )
 set(FILE_HEADERS
-  "util.hpp"
+  "sample.hpp"
 )
 
-add_compile_options(-DUTIL_EXPORTS)
+add_compile_options(-DPLUGIN_EXPORTS)
 
 add_library(${PROJECT_NAME} SHARED
   ${FILE_SOURCES}
