loader implementation added
- load, unload, list implemented.
- helper class added.

--- a/dynamic-build-system/src/core/helper/CMakeLists.txt
+++ b/dynamic-build-system/src/core/helper/CMakeLists.txt
@@ -1,16 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
-project(util VERSION 0.1)
+project(core.helper VERSION 0.1)
 
 set(FILE_SOURCES
-  "tokenize.cpp"
-  "executable_path.cpp"
-  "printline.cpp"
+  "helper.cpp"
 )
 set(FILE_HEADERS
-  "util.hpp"
+  "helper.hpp"
 )
 
-add_compile_options(-DUTIL_EXPORTS)
+add_compile_options(-DCORE_HELPER_EXPORTS)
 
 add_library(${PROJECT_NAME} SHARED
   ${FILE_SOURCES}
